--- a/css/style.css
+++ b/css/style.css
@@ -6,44 +6,81 @@ h1, h2 {
   text-align: center;
 }
 
-table {
+table{
   table-layout: fixed;
-  min-width: 740px;
-  width: 100%;
   font-weight: bold;
   text-align: center;
 }
 
-.racer_table td {
+#round1 {
+  width: 100%;
+  min-width: 740px;
+}
+
+#round2_p1,
+#round2_p2 {
+  display: inline-block;
+  max-width: 360px;
+  width: 360px;
+}
+
+#round2_p1 {
+  margin-right: 40px;
+}
+
+#round2_p1 td,
+#round2_p2 td {
+  background: #262626;
+  width: 78px;
+}
+
+#round2_p1 td.path,
+#round2_p2 td.path {
+  background: green; 
+}
+#round1 td,
+#round2_p1 td,
+#round2_p2 td {
   overflow: hidden;
   padding: 1%;
   border: 2px solid #fff;
 }
 
-.racer_table td img {
+#round1 td img,
+#round2_p1 td img,
+#round2_p2 td img {
   display: none;
 }
 
-.racer_table td p {
+#round1 td p,
+#round2_p1 td p,
+#round2_p2 td p {
   display: inline;
+  color: #fff;
 }
 
-.racer_table td.active img {
+#round1 td.active img,
+#round2_p1 td.active img,
+#round2_p2 td.active img {
   display: inline;
   height: 70px;
   width: 70px;
 }
 
-.racer_table td.active p {
+#round1 td.active p,
+#round2_p1 td.active p,
+#round2_p2 td.active p {
   display: none;
 }
 
-#player1_row {
-  color: #fff;
+.hidden {
+  display: none;
+}
+
+#p1_row {
   background: blue;
 }
 
-#player2_row {
-  color: #fff;
+#p2_row {
   background: red;
 }
